syntax = "proto3";

option go_package = "github.com/garupanojisan/mredis/protobuf/pb";

service SortedSet {
    // add a new member
    rpc ZAdd(ZAddRequest) returns (ZAddResponse) {};

    // get the ranking sorted by ascending order
    rpc ZRank(ZRankRequest) returns (ZRankResponse) {};
}

message ZAddRequest {
    string key = 1;
    int64 score = 2;
    string member = 3;
}

message ZAddResponse {

}

message ZRankRequest {
    string key = 1;
    string member = 2;
}

message ZRankResponse {
    int64 rank = 1;
}